--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -1,5 +1,16 @@
 @media screen and (min-width: 320px) {
-
+  .modalBackground{
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1200;
+   
+    opacity: 1;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      opaсity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   }
   .box {
     width: 280px;
     position: absolute;
@@ -78,7 +89,7 @@
   .button{
     margin-left: 20px;
   }
-   .image{
+  .image{
     width: 240px;
     height: 357px;
   }
