--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -9,7 +9,7 @@
    
     opacity: 1;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      opaсity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
   .box {
     width: 280px;
@@ -106,7 +106,7 @@
  
   opacity: 1;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opaсity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
   .box {
     width: 704px;
@@ -158,7 +158,7 @@
    
     opacity: 1;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      opaсity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
     .box {
       width: 806px;
