--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -11,17 +11,21 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
-  .box {
-    width: 280px;
+   .box {
+    width: 90vw; /* ширина 90% от ширины экрана */
+    max-width: 320px; /* ограничиваем максимум */
+    height: auto;
+    max-height: 90vh; /* не вылезает за экран */
+    overflow-y: auto;
     position: absolute;
-    height: 920px;
-    top: calc(50% - 250px);
-    left: calc(50% - 130px);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border-radius: 10px;
     background-color: #E6E6FA;
-    cursor: default;
-    padding: 40px 20px;
+    padding: 20px;
     z-index: 999;
+    box-sizing: border-box;
   }
   .title {
     font-size: 12px;
