--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 467px) {
   .modalBackground{
     position: relative;
     top: 0;
@@ -99,7 +99,7 @@
   }
 
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 1199px) {
  .modalBackground{
   position: fixed;
   top: 0;
@@ -151,7 +151,7 @@
     height: 376px;
   }
 }
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1200px) {
   .modalBackground{
     position: fixed;
     top: 0;
