--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -1,21 +1,20 @@
-@media screen and (max-width: 467px) {
-  .modalBackground{
-    position: relative;
+@media screen and (max-width: 767px)
+ {
+  .modalBackground {
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 1200;
-   
-    opacity: 1;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   }
-   .box {
-    width: 90vw; /* ширина 90% от ширины экрана */
-    max-width: 320px; /* ограничиваем максимум */
-    height: auto;
-    max-height: 90vh; /* не вылезает за экран */
+    background: rgba(0, 0, 0, 0.5);
+    overflow-y: auto;
+  }
+
+  .box {
+    width: 90vw;
+    max-width: 320px;
+    max-height: 90vh;
     overflow-y: auto;
     position: absolute;
     top: 50%;
@@ -99,7 +98,7 @@
   }
 
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
  .modalBackground{
   position: fixed;
   top: 0;
@@ -151,7 +150,7 @@
     height: 376px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .modalBackground{
     position: fixed;
     top: 0;
